Updating research positions

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
             <!--<aside>
                 <h3>Software Engineer</h3>
                 <p>Lockheed Martin Corporation</p>
-                <p>April 2022 - <b>Present</b></p>
+                <p><b>INSERT START DATE</b> - <b>Present</b></p>
                 <p>At Lockheed Martin I design, build, test, and deploy full-stack applications for various enterprises.</p>
             </aside>-->
 
             <!--<aside>
                 <h3>New Hire & Intern Mentor</h3>
                 <p>Lockheed Martin Corporation</p>
-                <p>May 2022 - July 2022</p>
+                <p><b>INSERT START DATE</b> - <b>Present</b></p>
                 <p>As a New Hire & Intern Mentor, I spent time educating newly hired employees and internship employees about Lockheed Martin Corporation. I also ensured that their day-to-day transitions in their current roles went smoothly.</p>
             </aside>-->
 
@@ -158,17 +158,6 @@
             <h2>Technical & Research Experience</h2>
             <hr>
 
-            <!--<aside>
-                <h3>Academic Researcher</h3>
-                <p>
-                    ri2p |
-                    <a href="https://ri2p.com/" target="_blank">Website &nearr;</a> |
-                    <a href="https://github.com/ChristopherBilg/ri2p" target="_blank">GitHub &nearr;</a>
-                </p>
-                <p><b>INSERT START DATE</b> - <b>Present</b></p>
-                <a href="https://github.com/ChristopherBilg/phd_research_papers" target="_blank">My Ph.D. Research Papers &nearr;<a/>
-            </aside>-->
-
             <aside>
                 <h3>Developer & Security Researcher</h3>
                 <p>
@@ -178,6 +167,13 @@
                 </p>
                 <p>January 2022 - <b>Present</b></p>
                 <p>“Every day people use the network to connect with people without worry of being tracked or their data being collected.” - geti2p.net</p>
+            </aside>
+
+            <aside>
+                <h3>Academic Research</h3>
+                <a href="https://github.com/ChristopherBilg/research_papers" target="_blank">Research Paper Repository &nearr;</a>
+                <p>August 2020 - <b>Present</b></p>
+                <p>The above hyperlink is a GitHub repository containing all of my graduate-level (and above) research papers.</p>
             </aside>
         </section>
 
