--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Christopher Bilger's Portfolio">
+    <meta name="keywords" content="Resume, Portfolio, Personal">
+    <meta name="author" content="Christopher Bilger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Chris Bilger | Associate Software Engineer</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.8.0/mvp.css">
 
     <style>
          :root {
@@ -48,7 +50,7 @@
 <body>
     <header>
         <h1>Chris Bilger | Associate Software Engineer</h1>
-        <img alt="Logo" src="./profile.jpg" height="200">
+        <img alt="Logo" src="./profile.jpg" height="200" width="auto">
     </header>
 
     <main>
