--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             </aside>
 
             <aside>
-                <h3>Academic Research</h3>
+                <h3>Academic Researcher</h3>
                 <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Paper Repository &nearr;</a>
                 <p>August 2020 - <b>Present</b></p>
                 <p>The above hyperlink is a GitHub repository containing all of my graduate-level (and above) research papers.</p>
