--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
     <header>
-        <h1>Chris Bilger | Associate Software Engineer</h1>
+        <h1>Chris Bilger | Portfolio</h1>
         <img alt="Logo" src="./profile.jpg" height="200" width="auto">
     </header>
 
@@ -209,6 +209,8 @@
     </main>
 
     <footer>
+        <hr>
+
         <section>
             <h4>References available upon request.</h4>
         </section>
