--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Christopher Bilger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Chris Bilger | Associate Software Engineer</title>
+    <title>Chris Bilger | Portfolio</title>
     <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.8.0/mvp.css">
 
     <style>
@@ -49,7 +49,7 @@
 
 <body>
     <header>
-        <h1>Chris Bilger | Portfolio</h1>
+        <h1>Chris Bilger | Associate Software Engineer</h1>
         <img alt="Logo" src="./profile.jpg" height="200" width="auto">
     </header>
 
