--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Chris Bilger | Portfolio</title>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css@1.8.0/mvp.css">
+    <link rel="stylesheet" href="./mvp.css">
 
     <style>
          :root {
