--- a/index.html
+++ b/index.html
@@ -116,14 +116,6 @@
             <h2>Education</h2>
             <hr>
 
-            <!--<aside>
-                <h3>Doctor of Philosophy: Computer Science</h3>
-                <p>Northcentral University</p>
-                <p><b>INSERT START DATE</b> - <b>Present</b></p>
-                <p>My Ph.D. studies...</p>
-                <a href="./ChristopherBilger_DoctoralDissertation.pdf" target="_blank">Doctoral Dissertation &nearr;<a/>
-            </aside>-->
-
             <aside>
                 <h3>Master of Science: Computer Science</h3>
                 <p>Arizona State University</p>
@@ -174,7 +166,7 @@
             <aside>
                 <h3>Academic Researcher</h3>
                 <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Paper Repository &nearr;</a>
-                <p>August 2020 - <b>Present</b></p>
+                <p>August 2020 - July 2022</p>
                 <p>The above hyperlink is a GitHub repository containing all of my graduate-level (and above) research papers.</p>
             </aside>
         </section>
