--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
             <h2>About Me</h2>
             <hr>
 
-            <p>Hello, my name is Chris Bilger and I work as an Associate Software Engineer at Lockheed Martin Corporation. I am also currently pursuing a Master of Science in Computer Science degree from Arizona State University, with a concentration in
-                Cybersecurity.
-            </p>
+            <p>Hello, my name is Chris Bilger and I work as an Associate Software Engineer at Lockheed Martin Corporation. I am a, soon to be, husband and I am currently pursuing a Master of Science in Computer Science degree from Arizona State University, with a concentration in Cybersecurity.</p>
 
             <nav>
                 <ul>
