--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <h3>Academic Researcher</h3>
                 <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Paper Repository &nearr;</a>
                 <p>August 2020 - July 2022</p>
-                <p>The above hyperlink is a GitHub repository containing all of my graduate-level (and above) research papers.</p>
+                <p>The above hyperlink is a GitHub repository containing all of my research papers.</p>
             </aside>
         </section>
 
