--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
     <header>
         <h1>Chris Bilger | Associate Software Engineer</h1>
-        <img alt="Logo" src="./profile.jpg" height="200" width="auto">
+        <img alt="Logo" src="./profile.jpg" height="200" width="320">
     </header>
 
     <main>
