--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
     <style>
          :root {
-            --color: #118bee;
-            --color-accent: #118bee15;
+            --color: #116bee;
+            --color-accent: #116bee15;
             --color-bg: #fff;
             --color-bg-secondary: #e9e9e9;
-            --color-link: #118bee;
+            --color-link: #116bee;
             --color-secondary: #920de9;
             --color-secondary-accent: #920de90b;
             --color-shadow: #f4f4f4;
-            --color-table: #118bee;
+            --color-table: #116bee;
             --color-text: #000;
             --color-text-secondary: #999;
         }
@@ -59,7 +59,8 @@
             <h2>About Me</h2>
             <hr>
 
-            <p>Hello, my name is Chris Bilger and I work as an Associate Software Engineer at Lockheed Martin Corporation. I am a, soon to be, husband and I am currently pursuing a Master of Science in Computer Science degree from Arizona State University, with a concentration in Cybersecurity.</p>
+            <p>Hello, my name is Chris Bilger and I work as an Associate Software Engineer at Lockheed Martin Corporation. I am a, soon to be, husband and I am currently pursuing a Master of Science in Computer Science degree from Arizona State University,
+                with a concentration in Cybersecurity.</p>
 
             <nav>
                 <ul>
