--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <!--<aside>
                 <h3>New Hire & Intern Mentor</h3>
                 <p>Lockheed Martin Corporation</p>
-                <p><b>INSERT START DATE</b> - <b>Present</b></p>
-                <p>As a New Hire & Intern Mentor, I spent time educating newly hired employees and internship employees about Lockheed Martin Corporation. I also ensured that their day-to-day transitions in their current roles went smoothly.</p>
+                <p>May 2022 - <b>Present</b></p>
+                <p>As a New Hire & Intern Mentor, I spent time educating two new employees about Lockheed Martin Corporation. I also ensured that their day-to-day transitions in their current roles went smoothly.</p>
             </aside>-->
 
             <aside>
@@ -104,7 +104,7 @@
                 <h3>New Hire & Intern Mentor</h3>
                 <p>Lockheed Martin Corporation</p>
                 <p>May 2021 - July 2021</p>
-                <p>As a New Hire & Intern Mentor, I spent time educating newly hired employees and internship employees about Lockheed Martin Corporation. I also ensured that their day-to-day transitions in their current roles went smoothly.</p>
+                <p>As a New Hire & Intern Mentor, I spent time educating two new employees about Lockheed Martin Corporation. I also ensured that their day-to-day transitions in their current roles went smoothly.</p>
             </aside>
         </section>
 
