Updating with newer quote/citation HTML tag

--- a/index.html
+++ b/index.html
@@ -229,8 +229,10 @@
                     <a href="https://chrisbilger.com/ri2p/">Website &nearr;</a>
                 </p>
                 <p>January 2022 - May 2022</p>
-                <p>“Every day people use the network to connect with people without worry of being tracked or their data
-                    being collected.” - geti2p.net</p>
+                <p>
+                    <q cite="https://geti2p.net/">Every day people use the network to connect with people without worry
+                        of being tracked or their data being collected.</q> - geti2p.net
+                </p>
             </aside>
         </section>
 
