--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                 <h3>Developer & Language Design Researcher</h3>
                 <p>
                     crisp |
-                    <a href="https://github.com/ChristopherBilg/crisp">GitHub &nearr;</a>
+                    <a href="https://github.com/ChristopherBilg/crisp">GitHub &nearr;</a> |
+                    <a href="https://chrisbilger.com/crisp/">Website &nearr;</a>
                 </p>
                 <p>May 2022 - <b>Present</b></p>
                 <p>Crisp is a dialect of the functional programming language Common Lisp. This is a highly-experimental
