--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <!-- <p><b>Professional Scrum Master I (PSM I)</b>: Certified by one of the signatories of the
                 <a href="https://agilemanifesto.org/">Agile Manifesto</a>, Ken Schwaber, through
                 <a href="https://www.scrum.org/">Scrum.org</a>. In completing this certification, I have demonstrated a
-                fundamental level of Scrum mastery. <em>July 2022 - Forever</em>
+                fundamental level of Scrum mastery. ID: INSERT_ID_NUMBER <em>July 2022 - Forever</em>
             </p> -->
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
