Fix anchor targets

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
         <section>
             <hr id="about-me">
-            <h2><a href="#about-me">About Me</a></h2>
+            <h2><a href="#about-me" target="_self">About Me</a></h2>
             <hr>
 
             <p>Hello, my name is Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em> father,
@@ -89,7 +89,7 @@
 
         <section>
             <hr id="professional-experience">
-            <h2><a href="#professional-experience">Professional Experience</a></h2>
+            <h2><a href="#professional-experience" target="_self">Professional Experience</a></h2>
             <hr>
 
             <aside>
@@ -155,7 +155,7 @@
 
         <section>
             <hr id="education">
-            <h2><a href="#education">Education</a></h2>
+            <h2><a href="#education" target="_self">Education</a></h2>
             <hr>
 
             <aside>
@@ -200,7 +200,7 @@
 
         <section>
             <hr id="technical-and-research-experience">
-            <h2><a href="#technical-and-research-experience">Technical & Research Experience</a></h2>
+            <h2><a href="#technical-and-research-experience" target="_self">Technical & Research Experience</a></h2>
             <hr>
 
             <aside>
@@ -241,7 +241,7 @@
 
         <section>
             <hr id="certifications">
-            <h2><a href="#certifications">Certifications</a></h2>
+            <h2><a href="#certifications" target="_self">Certifications</a></h2>
             <hr>
 
             <!-- <p><b>Professional Scrum Master I (PSM I)</b>: Certified by one of the signatories of the
@@ -264,7 +264,7 @@
 
         <section>
             <hr id="personal-interests">
-            <h2><a href="#personal-interests">Personal Interests</a></h2>
+            <h2><a href="#personal-interests" target="_self">Personal Interests</a></h2>
             <hr>
 
             <table>
