Fix old anchor target style

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta name="author" content="Christopher Bilger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <base target="_blank">
-
     <title>Chris Bilger, M.S. | Portfolio</title>
     <link rel="stylesheet" media="screen" href="./mvp.css">
 
@@ -66,7 +64,7 @@
     <main>
         <section>
             <hr id="about-me">
-            <h2><a href="#about-me" target="_self">About Me</a></h2>
+            <h2><a href="#about-me">About Me</a></h2>
             <hr>
 
             <p>Hello, my name is Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em> father,
@@ -76,11 +74,11 @@
 
             <nav>
                 <ul>
-                    <li><a href="https://chrisbilger.com/">Portfolio &nearr;</a></li>
-                    <li><a href="https://github.com/ChristopherBilg">GitHub &nearr;</a></li>
-                    <li><a href="https://www.linkedin.com/in/christopher-bilger/">LinkedIn &nearr;</a>
+                    <li><a href="https://chrisbilger.com/" target="_blank">Portfolio &nearr;</a></li>
+                    <li><a href="https://github.com/ChristopherBilg" target="_blank">GitHub &nearr;</a></li>
+                    <li><a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn &nearr;</a>
                     </li>
-                    <li><a href="mailto:christopherbilg@gmail.com">Email &nearr;</a></li>
+                    <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
                 </ul>
             </nav>
         </section>
@@ -89,7 +87,7 @@
 
         <section>
             <hr id="professional-experience">
-            <h2><a href="#professional-experience" target="_self">Professional Experience</a></h2>
+            <h2><a href="#professional-experience">Professional Experience</a></h2>
             <hr>
 
             <aside>
@@ -155,7 +153,7 @@
 
         <section>
             <hr id="education">
-            <h2><a href="#education" target="_self">Education</a></h2>
+            <h2><a href="#education">Education</a></h2>
             <hr>
 
             <aside>
@@ -200,15 +198,15 @@
 
         <section>
             <hr id="technical-and-research-experience">
-            <h2><a href="#technical-and-research-experience" target="_self">Technical & Research Experience</a></h2>
+            <h2><a href="#technical-and-research-experience">Technical & Research Experience</a></h2>
             <hr>
 
             <aside>
                 <h3>Developer & Language Design Researcher</h3>
                 <p>
                     crisp |
-                    <a href="https://github.com/ChristopherBilg/crisp">GitHub &nearr;</a> |
-                    <a href="https://chrisbilger.com/crisp/">Website &nearr;</a>
+                    <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a> |
+                    <a href="https://chrisbilger.com/crisp/" target="_blank">Website &nearr;</a>
                 </p>
                 <p>May 2022 - <b>Present</b></p>
                 <p>Crisp is a dialect of the functional programming language Common Lisp. This is a highly-experimental
@@ -217,7 +215,7 @@
 
             <aside>
                 <h3>Academic Research: M.S.</h3>
-                <a href="https://github.com/ChristopherBilg/research-papers">Research Papers &nearr;</a>
+                <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers &nearr;</a>
                 <p>August 2020 - July 2022</p>
                 <p>The above hyperlink is a repository containing all of my research papers.</p>
             </aside>
@@ -226,8 +224,8 @@
                 <h3>Developer & Security Researcher</h3>
                 <p>
                     ri2p |
-                    <a href="https://github.com/ChristopherBilg/ri2p">GitHub &nearr;</a> |
-                    <a href="https://chrisbilger.com/ri2p/">Website &nearr;</a>
+                    <a href="https://github.com/ChristopherBilg/ri2p" target="_blank">GitHub &nearr;</a> |
+                    <a href="https://chrisbilger.com/ri2p/" target="_blank">Website &nearr;</a>
                 </p>
                 <p>January 2022 - May 2022</p>
                 <p>
@@ -241,7 +239,7 @@
 
         <section>
             <hr id="certifications">
-            <h2><a href="#certifications" target="_self">Certifications</a></h2>
+            <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
@@ -258,7 +256,7 @@
 
         <section>
             <hr id="personal-interests">
-            <h2><a href="#personal-interests" target="_self">Personal Interests</a></h2>
+            <h2><a href="#personal-interests">Personal Interests</a></h2>
             <hr>
 
             <table>
