--- a/index.html
+++ b/index.html
@@ -242,6 +242,9 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
+            <!-- <p><b>IoT Foundations: Fundamentals</b>: Certification obtained through the LinkedIn Learning platform.
+                <em>August 2022 - Forever</em></p> -->
+
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
                 verifies my knowledge of developer operations for engineering on Amazon Web Services (AWS). Over a 3-day
                 (24 total hours) training session, I learned about AWS cloud computing services and then passed the
