--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <hr>
 
             <aside>
-                <h3>Developer & Language Design Researcher</h3>
+                <h3>Developer & Compiler Design Researcher</h3>
                 <p>
                     crisp |
                     <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a> |
@@ -210,7 +210,7 @@
                 </p>
                 <p>May 2022 - <b>Present</b></p>
                 <p>Crisp is a dialect of the functional programming language Common Lisp. This is a highly-experimental
-                    project (i.e. subject to change at any time) for researching language design.</p>
+                    project (i.e. subject to change at any time) for researching language and compiler design.</p>
             </aside>
 
             <aside>
@@ -221,7 +221,7 @@
             </aside>
 
             <aside>
-                <h3>Developer & Security Researcher</h3>
+                <h3>Developer & Network Security Researcher</h3>
                 <p>
                     ri2p |
                     <a href="https://github.com/ChristopherBilg/ri2p" target="_blank">GitHub &nearr;</a> |
