--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <hr>
 
             <!-- <p><b>IoT Foundations: Fundamentals</b>: Certification obtained through the LinkedIn Learning platform.
-                <em>August 2022 - Forever</em></p> -->
+                <em><INSERT MONTH> - Forever</em></p> -->
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
                 verifies my knowledge of developer operations for engineering on Amazon Web Services (AWS). Over a 3-day
