--- a/index.html
+++ b/index.html
@@ -90,6 +90,18 @@
             <h2><a href="#professional-experience">Professional Experience</a></h2>
             <hr>
 
+            <!-- <aside>
+                <h3>Senior Software Engineer</h3>
+                <p>Lockheed Martin Corporation</p>
+                <p><b>INSERT START DATE</b> - <b>Present</b></p>
+                <p>
+                    At Lockheed Martin I lead a team of engineers building full-stack applications.
+                    <br>
+                    <br>
+                    <code>Internal Title: <b>Senior Member of Engineering Staff</b></code>
+                </p>
+            </aside> -->
+
             <aside>
                 <h3>Software Engineer</h3>
                 <p>Lockheed Martin Corporation</p>
@@ -123,7 +135,7 @@
                 <p>Lockheed Martin Corporation</p>
                 <p>May 2020 - April 2022</p>
                 <p>
-                    At Lockheed Martin I work with a team of individuals on full-stack applications.
+                    At Lockheed Martin I work with a team of engineers building full-stack applications.
                     <br>
                     <br>
                     <code>Internal Title: <b>Associate Member of Engineering Staff</b></code>
