Update with future research (post-grad)

--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
                 <p>May 2022 - <b>Present</b></p>
                 <p>Crisp is a dialect of the functional programming language Common Lisp. This is a highly-experimental
                     project (i.e. subject to change at any time) for researching language and compiler design.</p>
+                <!-- <p>These are projects for researching compiler design.</p> -->
             </aside>
 
             <aside>
@@ -254,8 +255,14 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
+            <!-- Once this is finished, work through the entirety of the book "Crafting Interpreters" and implement the
+                `lox` programming language using modern C++. While that is happening, update the "Compiler Design Researcher"
+                section to include the `blox` name, Git repo, (and website?). Once the `blox` programming language and book
+                walkthrough is completed, begin working on final version of a self-hosted, LLVM-compiled programming language
+                in modern C++ (or modern Go, research Go more before making a choice on the "host" programming language). -->
             <!-- <p><b>IoT Foundations: Fundamentals</b>: Certification obtained through the LinkedIn Learning platform.
-                <em><INSERT MONTH> - Forever</em></p> -->
+                <em>August 2022 - Forever</em>
+            </p> -->
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
                 verifies my knowledge of developer operations for engineering on Amazon Web Services (AWS). Over a 3-day
