Clean up website comments

--- a/index.html
+++ b/index.html
@@ -90,18 +90,6 @@
             <h2><a href="#professional-experience">Professional Experience</a></h2>
             <hr>
 
-            <!-- <aside>
-                <h3>Senior Software Engineer</h3>
-                <p>Lockheed Martin Corporation</p>
-                <p><b>INSERT START DATE</b> - <b>Present</b></p>
-                <p>
-                    At Lockheed Martin I lead a team of engineers building full-stack applications.
-                    <br>
-                    <br>
-                    <code>Internal Title: <b>Senior Member of Engineering Staff</b></code>
-                </p>
-            </aside> -->
-
             <aside>
                 <h3>Software Engineer</h3>
                 <p>Lockheed Martin Corporation</p>
@@ -220,10 +208,9 @@
                     <a href="https://github.com/ChristopherBilg/crisp" target="_blank">GitHub &nearr;</a> |
                     <a href="https://chrisbilger.com/crisp/" target="_blank">Website &nearr;</a>
                 </p>
-                <p>May 2022 - <b>Present</b></p>
-                <p>Crisp is a dialect of the functional programming language Common Lisp. This is a highly-experimental
+                <p>May 2022 - June 2022</p>
+                <p>Crisp is a dialect of the functional programming language Lisp. This is a highly-experimental
                     project (i.e. subject to change at any time) for researching language and compiler design.</p>
-                <!-- <p>These are projects for researching compiler design.</p> -->
             </aside>
 
             <aside>
@@ -255,11 +242,6 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
-            <!-- Once this is finished, work through the entirety of the book "Crafting Interpreters" and implement the
-                `lox` programming language using modern C++. While that is happening, update the "Compiler Design Researcher"
-                section to include the `blox` name, Git repo, (and website?). Once the `blox` programming language and book
-                walkthrough is completed, begin working on final version of a self-hosted, LLVM-compiled programming language
-                in modern C++ (or modern Go, research Go more before making a choice on the "host" programming language). -->
             <!-- <p><b>IoT Foundations: Fundamentals</b>: Certification obtained through the LinkedIn Learning platform.
                 <em>August 2022 - Forever</em>
             </p> -->
