--- a/index.html
+++ b/index.html
@@ -251,8 +251,8 @@
                 (24 total hours) training session, I learned about AWS cloud computing services and then passed the
                 examination for using the skills learned. <em>June 2021 - Forever</em></p>
 
-            <p><b>United States Security Clearance - Secret</b>: Granted by the United States Federal Government.
-                <em>July 2020 - July 2030</em>
+            <p><b>United States Security Clearance - Secret</b>: Granted by the United States Department of Defense
+                (DOD) and Defense Counterintelligence and Security Agency (DCSA). <em>July 2020 - July 2030</em>
             </p>
         </section>
 
