Add to personal interests

--- a/index.html
+++ b/index.html
@@ -280,6 +280,9 @@
                         <td>Puzzles</td>
                         <td>Engineering</td>
                     </tr>
+                    <tr>
+                        <td colspan="3">3x3 Ao5 PB (Beginner): 3:05</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
