Added technical experience section for (future) automatic garden

--- a/index.html
+++ b/index.html
@@ -201,6 +201,18 @@
             <h2><a href="#technical-and-research-experience">Technical & Research Experience</a></h2>
             <hr>
 
+            <!-- <aside>
+                <h3>Automated Garden Project</h3>
+                <p>
+                    growden |
+                    <a href="https://github.com/ChristopherBilg/growden" target="_blank">GitHub &nearr;</a> |
+                    <a href="https://chrisbilger.com/growden/" target="_blank">Website &nearr;</a>
+                </p>
+                <p><b>INSERT START DATE</b> - <b>Present</b></p>
+                <p>This is a project for home-use automated gardens (specifically my own gardens). Images, parts,
+                    details, set instructions, etc. are available on the website!</p>
+            </aside> -->
+
             <aside>
                 <h3>Academic Research: M.S.</h3>
                 <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers &nearr;</a>
