--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 </p>
                 <p><b>INSERT START DATE</b> - <b>Present</b></p>
                 <p>This is a project for home-use automated gardens (specifically my own gardens). Images, parts,
-                    details, set instructions, etc. are available on the website!</p>
+                    details, setup instructions, etc. are available on the website!</p>
             </aside> -->
 
             <aside>
