--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
             <h2><a href="#about-me">About Me</a></h2>
             <hr>
 
-            <p>Hello, my name is Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em> father,
+            <p>&emsp;Hello, my name is Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em> father,
                 engineer, educator, and leader. I currently work as a Software Engineer at Lockheed Martin where I
                 design, build, test, and deploy full-stack applications for various enterprises. I am also conducting
                 research and development for Lockheed Martin products and services as well as mentoring new hires.</p>
+
+            <!-- <p>&emsp;In my free time I love spending quality time with my wife. I am also currently working
+                on an automated gardening project using ESP32 microcontrollers, relays, switches, networking, pneumatic
+                tubing, and more!</p> -->
 
             <nav>
                 <ul>
@@ -263,9 +267,10 @@
                 (24 total hours) training session, I learned about AWS cloud computing services and then passed the
                 examination for using the skills learned. <em>June 2021 - Forever</em></p>
 
-            <p><b>United States Security Clearance - Secret</b>: Granted by the United States Department of Defense
+            <!-- Temporary removal -->
+            <!-- <p><b>United States Security Clearance - Secret</b>: Granted by the United States Department of Defense
                 (DOD) and Defense Counterintelligence and Security Agency (DCSA). <em>July 2020 - July 2030</em>
-            </p>
+            </p> -->
         </section>
 
         <br>
