--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
                 design, build, test, and deploy full-stack applications for various enterprises. I am also conducting
                 research and development for Lockheed Martin products and services as well as mentoring new hires.</p>
 
-            <!-- <p>&emsp;In my free time I love spending quality time with my wife. I am also currently working
-                on an automated gardening project using ESP32 microcontrollers, relays, switches, networking, pneumatic
-                tubing, and more!</p> -->
+            <!-- <p>&emsp;In my free time I love spending quality time with my wife. I'm an avid Rubik's Cube solver and outdoor enthusiast. I am also currently working on an automated gardening project using ESP32 microcontrollers, relays, switches, networking, pneumatic tubing, and more!</p> -->
 
             <nav>
                 <ul>
