Update cube method

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <td>Engineering</td>
                     </tr>
                     <tr>
-                        <td colspan="3">3x3 Ao5 PB (Beginner): 1:27.65</td>
+                        <td colspan="3">3x3 Ao5 PB (Beginner CFOP): 1:27.65</td>
                     </tr>
                 </tbody>
             </table>
