--- a/index.html
+++ b/index.html
@@ -26,10 +26,6 @@
             --color-text-secondary: #999;
         }
 
-        img {
-            border-radius: 2em;
-        }
-
         hr {
             margin-top: 0em;
             margin-bottom: 0em;
@@ -46,11 +42,19 @@
         }
 
         table {
-            margin: 1em;
+            margin-top: 1em;
         }
 
         table tr td:first-child {
             text-align: center;
+        }
+
+        img #logo {
+            border-radius: 2em;
+        }
+
+        img #skills {
+            margin-top: 1em;
         }
     </style>
 </head>
@@ -58,7 +62,7 @@
 <body>
     <header>
         <h1>Chris Bilger, M.S. | Portfolio</h1>
-        <img alt="Logo" src="./profile.avif" width="320" height="200">
+        <img id="logo" alt="Image of Chris Bilger" src="./profile.avif" width="320" height="200">
     </header>
 
     <main>
@@ -81,6 +85,19 @@
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
                 </ul>
             </nav>
+        </section>
+
+        <br>
+
+        <section>
+            <hr id="relevant-skills">
+            <h2><a href="#relevant-skills">Relevant Skills</a></h2>
+            <hr>
+
+            <figure>
+                <img id="skills" alt="Image of relevant skills" src="https://i.imgur.com/lDiqxIu.png">
+                <figcaption>Image of relevant skills; as of 2022-05-25</figcaption>
+            </figure>
         </section>
 
         <br>
