Update css and src of images

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
             text-align: center;
         }
 
-        img #logo {
+        #profile {
             border-radius: 2em;
         }
 
-        img #skills {
+        #skills {
             margin-top: 1em;
         }
     </style>
@@ -62,7 +62,7 @@
 <body>
     <header>
         <h1>Chris Bilger, M.S. | Portfolio</h1>
-        <img id="logo" alt="Image of Chris Bilger" src="./profile.avif" width="320" height="200">
+        <img id="profile" alt="Image of Chris Bilger" src="./profile.avif" width="320" height="200">
     </header>
 
     <main>
@@ -95,7 +95,7 @@
             <hr>
 
             <figure>
-                <img id="skills" alt="Image of relevant skills" src="https://i.imgur.com/lDiqxIu.png">
+                <img id="skills" alt="Image of relevant skills" src="./skills.png" width="755" height="164">
                 <figcaption>Image of relevant skills; as of 2022-05-25</figcaption>
             </figure>
         </section>
