--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <hr>
 
             <figure>
-                <img id="skills" alt="Image of relevant skills" src="./skills.png" width="755" height="164">
+                <img id="skills" alt="Image of relevant skills" src="./skills.png" width="750">
                 <figcaption>Image of relevant skills; as of 2022-05-25</figcaption>
             </figure>
         </section>
