--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             text-align: center;
         }
 
+        figcaption {
+            color: #949494;
+        }
+
         #profile {
             border-radius: 2em;
         }
