Fix css selectors

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             text-align: center;
         }
 
-        figcaption {
-            color: #767676;
+        figure figcaption {
+            color: #949494;
         }
 
         #profile {
