Add future potential certification

--- a/index.html
+++ b/index.html
@@ -263,6 +263,10 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
+            <!-- <p><b>Professional Scrum Master I</b>: Certification obtained through the Scrum.org platform.
+                Certification ID: XXXX <em><b>INSERT DATE OBTAINED</b> - Forever</em>
+            </p> -->
+
             <!-- <p><b>IoT Foundations: Fundamentals</b>: Certification obtained through the LinkedIn Learning platform.
                 <em>August 2022 - Forever</em>
             </p> -->
