No blog but moved around items

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Chris Bilger, M.S. | Portfolio</title>
-    <link rel="stylesheet" media="screen" href="./mvp.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="stylesheet" media="screen" href="./css/mvp.css">
 
     <style>
         :root {
@@ -66,7 +67,7 @@
 <body>
     <header>
         <h1>Chris Bilger, M.S. | Portfolio</h1>
-        <img id="profile" alt="Image of Chris Bilger" src="./profile.avif" width="320" height="200">
+        <img id="profile" alt="Image of Chris Bilger" src="./images/profile.avif" width="320">
     </header>
 
     <main>
@@ -99,7 +100,7 @@
             <hr>
 
             <figure>
-                <img id="skills" alt="Image of relevant skills" src="./skills.png" width="755">
+                <img id="skills" alt="Image of relevant skills" src="./images/skills.png" width="755">
                 <figcaption>Image of relevant skills; as of 2022-05-25</figcaption>
             </figure>
         </section>
