--- a/index.html
+++ b/index.html
@@ -11,57 +11,7 @@
     <title>Chris Bilger, M.S. | Portfolio</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
     <link rel="stylesheet" media="screen" href="./css/mvp.css">
-
-    <style>
-        :root {
-            --color: #116bee;
-            --color-accent: #116bee15;
-            --color-bg: #fff;
-            --color-bg-secondary: #e9e9e9;
-            --color-link: #116bee;
-            --color-secondary: #920de9;
-            --color-secondary-accent: #920de90b;
-            --color-shadow: #f4f4f4;
-            --color-table: #116bee;
-            --color-text: #000;
-            --color-text-secondary: #999;
-        }
-
-        hr {
-            margin-top: 0em;
-            margin-bottom: 0em;
-        }
-
-        nav {
-            margin-bottom: 0em;
-            display: flex;
-            flex-flow: wrap;
-        }
-
-        h2 a {
-            color: inherit;
-        }
-
-        table {
-            margin-top: 1em;
-        }
-
-        table tr td:first-child {
-            text-align: center;
-        }
-
-        figure figcaption {
-            color: #767676;
-        }
-
-        #profile {
-            border-radius: 2em;
-        }
-
-        #skills {
-            margin-top: 1em;
-        }
-    </style>
+    <link rel="stylesheet" media="screen" href="./css/styles.css">
 </head>
 
 <body>
@@ -306,7 +256,7 @@
                         <td>Engineering</td>
                     </tr>
                     <tr>
-                        <td colspan="3">3x3 Ao5 PB (Beginner CFOP): 1:27.65</td>
+                        <td colspan="3">3x3 Ao5 PB (Beginner CFOP): 1:15.32</td>
                     </tr>
                 </tbody>
             </table>
