--- a/index.html
+++ b/index.html
@@ -215,11 +215,7 @@
             <hr>
 
             <!-- <p><b>Professional Scrum Master I</b>: Certification obtained through the Scrum.org platform.
-                Certification ID: XXXX <em><b>INSERT DATE OBTAINED</b> - Forever</em>
-            </p> -->
-
-            <!-- <p><b>IoT Foundations: Fundamentals</b>: Certification obtained through the LinkedIn Learning platform.
-                <em>August 2022 - Forever</em>
+                Certification ID: XXXX <em>August 2022 - Forever</em>
             </p> -->
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
