Added more potential future certs

--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@
             <h2><a href="#certifications">Certifications</a></h2>
             <hr>
 
+            <!-- <p><b>Professional Scrum Developer I</b>: Certification obtained through the Scrum.org platform.
+                Certification ID: XXXX <em>November 2022 - Forever</em>
+            </p> -->
+
+            <!-- <p><b>Child and Baby First Aid/CPR/AED</b>: Online training and certification provided by the American Red
+                Cross. Certification ID: XXXX <em>November 2022 - Forever</em>
+            </p> -->
+
             <!-- <p><b>Professional Scrum Master I</b>: Certification obtained through the Scrum.org platform.
                 Certification ID: XXXX <em>August 2022 - Forever</em>
             </p> -->
