Add initial files/hyperlinks for blog

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Christopher Bilger's Portfolio">
-    <meta name="keywords" content="Resume, Portfolio, Personal">
+    <meta name="keywords" content="Resume, Portfolio, Personal, Blog">
     <meta name="author" content="Christopher Bilger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -38,6 +38,7 @@
                     <li><a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn &nearr;</a>
                     </li>
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
+                    <li><a href="/blog" target="_blank">Blog &nearr;</a></li>
                 </ul>
             </nav>
         </section>
@@ -215,11 +216,11 @@
             <hr>
 
             <!-- <p><b>Professional Scrum Developer I</b>: Certification obtained through the Scrum.org platform.
-                Certification ID: XXXX <em>November 2022 - Forever</em>
+                Certification ID: XXXX <em>October 2022 - Forever</em>
             </p> -->
 
             <!-- <p><b>Child and Baby First Aid/CPR/AED</b>: Online training and certification provided by the American Red
-                Cross. Certification ID: XXXX <em>November 2022 - Forever</em>
+                Cross. Certification ID: XXXX <em>September 2022 - September 2024</em>
             </p> -->
 
             <!-- <p><b>Professional Scrum Master I</b>: Certification obtained through the Scrum.org platform.
