--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn &nearr;</a>
                     </li>
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
-                    <li><a href="/blog" target="_blank">Blog &nearr;</a></li>
+                    <!-- <li><a href="/blog" target="_blank">Blog &nearr;</a></li> -->
                 </ul>
             </nav>
         </section>
