--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <h1>Chris Bilger, M.S. | Portfolio</h1>
-        <img id="profile" alt="Image of Chris Bilger" src="./images/profile.avif" width="320">
+        <img id="header-image" alt="Image of Chris Bilger" src="./images/profile.avif" width="320">
     </header>
 
     <main>
