Remove unnecessary self-referential links

--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 
             <nav>
                 <ul>
-                    <li><a href="https://chrisbilger.com/" target="_blank">Portfolio &nearr;</a></li>
                     <li><a href="https://github.com/ChristopherBilg" target="_blank">GitHub &nearr;</a></li>
                     <li><a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn &nearr;</a>
                     </li>
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
-                    <li><a href="/blog" target="_blank">Blog &nearr;</a></li>
+                    <li><a href="/blog">Blog</a></li>
                 </ul>
             </nav>
         </section>
