Continuing to refine the blog system (minimalist style)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <li><a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn &nearr;</a>
                     </li>
                     <li><a href="mailto:christopherbilg@gmail.com" target="_blank">Email &nearr;</a></li>
-                    <li><a href="/blog">Blog</a></li>
+                    <!-- <li><a href="/blog">Blog</a></li> -->
                 </ul>
             </nav>
         </section>
