--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <h2><a href="#about-me">About Me</a></h2>
             <hr>
 
-            <p>&emsp;Hello, my name is Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em> father,
+            <p>Hello, my name is Chris Bilger and I am a <em>soon-to-be</em> husband, <em>soon-to-be</em> father,
                 engineer, educator, and leader. I currently work as a Software Engineer at Lockheed Martin where I
                 design, build, test, and deploy full-stack applications for various enterprises. I am also conducting
                 research and development for Lockheed Martin products and services as well as mentoring new hires.</p>
