Update scrum.org cert info

--- a/index.html
+++ b/index.html
@@ -215,11 +215,11 @@
             <hr>
 
             <!-- <p><b>Professional Scrum Developer I</b>: Certification obtained through the Scrum.org platform.
-                Certification ID: XXXX <em>October 2022 - Forever</em>
+                <em>October 2022 - Forever</em>
             </p> -->
 
             <!-- <p><b>Professional Scrum Master I</b>: Certification obtained through the Scrum.org platform.
-                Certification ID: XXXX <em>August 2022 - Forever</em>
+                <em>August 2022 - Forever</em>
             </p> -->
 
             <p><b>DevOps Engineering on AWS</b>: Accredited through ExitCertified, this certification enhances and
